--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "graph-data-structure": "^1.8.0"
+    "graph-data-structure": "^1.8.0",
+    "joi": "^14.3.1"
   }
 }
